# theia

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  gunicorn_cfg.py  gunicorn_start.sh  pyproject.toml  reproduction_requirements.txt  requirements.txt  run.sh  setup.cfg  setup.py  stats.sh  stats_ablation.sh  test.txt  train_all.sh  train_all_cross.sh  train_rhea_ablation.sh
data/: get_data.sh
figures/: accuracies.eps  accuracies.py  accuracy-vs-size-ecreact.eps  accuracy-vs-size-rheadb.eps  accuracy_vs_size.py  confusion-matrix.eps  generate_figures.sh  heatmap.py  heatmap_helpers.py  helpers.py  tmaps.py  training-metrics.eps  training_metrics.py
models/: ecreact-0-ec12-le.pkl  ecreact-0-ec123-le.pkl  ecreact-map.pkl  rheadb-0-ec1-le.pkl  rheadb-0-ec12-le.pkl  rheadb-0-ec123-le.pkl
notebooks/: requirements.txt  rxn_explain.ipynb
scripts/: _old_create_map.py  _old_encode_rxnfp.py  _old_explain_molecule.py  _old_train_mlp.py  class_counts.py  create_drfp_mappings.py  encode_split_data.py  get_stats.py  get_unique_smiles.py  map_analysis.py  prepare_rhea_data.py  train.py  train_knn.py
src/theia/: __init__.py  data_manager.py  download.py
src/theia/api/: __init__.py  internal.py
src/theia/cli/: cli.py
src/theia/ml/: __init__.py  explained_reaction.py  inference_reaction_dataset.py  mlp_classifier.py  reaction_dataset.py
src/theia/models/: rheadb-map.pkl
src/theia/web/: __init__.py  helpers.py  predict.py  run.py  search.py
src/theia/web/static/: bulma-tabs.js  notemplate.js  stackedbar.css  style.css
src/theia/web/static/favicon/: site.webmanifest
src/theia/web/static/ketcher/: asset-manifest.json  index.html
src/theia/web/templates/: base.html
src/theia/web/templates/search/: index.html
