# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = theia-pypi
version = 0.5.5
description = Explainable prediction of EC numbers using a multilayer perceptron.
author = Daniel Probst
author_email = daniel.probst@hey.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/daenuprobst/theia
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/daenuprobst/theia
    Source = https://github.com/daenuprobst/theia
#    Changelog = https://github.com/daenuprobst/theia
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
    Twitter = https://twitter.com/skepteis

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Chemistry
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8
install_requires =
    importlib-metadata; python_version<"3.8"
    flask==2.1.2
    drfp==0.3.6
    annoy==1.15.0
    # tmap-viz==1.0.16
    rdkit-pypi==2022.3.4
    # pycm==3.5
    pandas==1.4.3
    scikit-learn==1.1.1
    click==8.1.3
    tqdm==4.64.0
    shap==0.41.0
    torch==1.13.1
    typer==0.7.0
    rich==13.2.0
    platformdirs==2.6.2
    requests==2.28.2

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    theia = theia.web.run:local
    theia-download = theia.cli.cli:download
    theia-cli = theia.cli.cli:predict_cli

